--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<!-- loadingbar -->
 	<script src="vendor/js/loading-bar.min.js"></script>
-	<link href='vendor/css/loading-bar.min.css' rel='stylesheet' />
+	<link href="vendor/css/loading-bar.min.css" rel="stylesheet" />
 
 	<script src="app/js/script.js"></script>
 </head>
